<resources>
    <string name="app_name">Biblioteca</string>

    /* Labels */
    /* Login */
    <string name="labelLoginTittle">Login</string>
    <string name="labelLogUser">Usuario</string>
    <string name="labelLogPassword">Contraseña</string>

    /* Register*/
    <string name="labelRegTitle">Registrarse</string>
    <string name="labelRegName">Nombre Completo</string>
    <string name="labelRegEmail">Correo Electronico</string>
    <string name="labelRegPhone">Telefono</string>
    <string name="labelRegAddress">Direccion</string>
    <string name="labelRegPassword">Contraseña</string>


    /* Buttons */
    <string name="btnLog">Iniciar sesion</string>
    <string name="btnLogRegister">Registrarse</string>
    <string name="btnRegRegister">Registrarse</string>

    /* labels Admin*/
    <string name="label_librosAdmin">Libros Disponibles</string>
    <string name="labelAddTittle">Agregar libro</string>
    <string name="labelAddNombreLibro">Nombre Libro</string>
    <string name="labelAddAutorLibro">Autor Libro</string>
    <string name="labelAddCantidadLibro">Cantidad libros</string>
    <string name="labelAddUrl">Url Libro</string>
    <string name="labelAddImgLibro">Imagen Libro</string>
    <string name="labelAddDescLibro">Descripcion</string>

    /* label Admin Edit */
    <string name="label_EditAdminTitle">Editar libros</string>
    <string name="labelEditNombreLibro">Nombre Libro</string>
    <string name="labelEditutorLibro">Autor Libro</string>
    <string name="labelEditCantidadLibro">Cantidad libros</string>
    <string name="labelEditUrl">Url Libro</string>
    <string name="labelEditImgLibro">Imagen Libro</string>
    <string name="labelEditDescLibro">Descripcion</string>

    /* Buttons Admin*/
    <string name="btnAgregar">Agregar Libro</string>
    <string name="btnUpdateBook">Actualizar Libro</string>
    /* Admin menu items*/
    <string name="MenuAdd">Agregar</string>
    <string name="MenuPrestado">Prestados</string>
    <string name="MenuSalir">Salir</string>

    /* User Menu items */
    <string name="btnPrestarLibro">Prestar</string>

</resources>