<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Update_Book_Admin">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/label_EditAdminTitle"
        android:textAlignment="center"
        android:textColorHint="#FBFBFB"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditNombreLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditutorLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditCantidadLibro"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#F6F4F4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditUrl"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditImgLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEditDesc"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelEditDescLibro"
        android:inputType="textMultiLine|textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUpdateBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdateBook"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />
</LinearLayout>