<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    android:orientation="vertical"
    tools:context=".AddBookAdmin">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/labelAddTittle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/txtAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddNombreLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddAutorLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddCantidadLibro"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddUrl"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddImgLibro"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddDescripcion"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background"
        android:ems="10"
        android:hint="@string/labelAddDescLibro"
        android:inputType="textMultiLine|text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#DA4E03"
        android:text="@string/btnAgregar"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold" />



</LinearLayout>