<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/labelRegTitle"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtRegName"
        android:text="@string/labelRegName"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtRegEmail"
        android:text="@string/labelRegEmail"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtRegPhone"
        android:text="@string/labelRegPhone"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtRegAdress"
        android:text="@string/labelRegAddress"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtRegPassword"
        android:text="@string/labelRegPassword"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegRegister"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

</LinearLayout>