<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelLogTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/labelLoginTittle"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txtLogUser"
        android:text="@string/labelLogUser"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtLogUser"
        android:labelFor="@id/txtLogPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelLogPassword"
        android:textAlignment="center"
        android:textColor="#448AFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtLogPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btnLog"
        android:textAlignment="center"
        android:textColor="#E4E2E2"
        android:textSize="34sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogRegister"
        android:textAlignment="center"
        android:textColor="#E4E2E2"
        android:textSize="34sp"
        android:textStyle="bold" />

</LinearLayout>